# duckms

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
duckms/: __init__.py  ms_to_duckdb.py
examples/: inspect.py
